fixing more bugs

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,7 +9,7 @@
   </div>
 <% end %>
 <h1>Home Page</h1>
-<form mehtod="post" action = "/">
+<form method="post" action = "/users/login">
   <div>
     <label>User</label>
     <input type="text" name="username">
