--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/signup">
+<form method="post" action="/users/signup">
   <div>
     <label>Enter Username:</label>
     <input type="text" name="username">
