redirects and placeholders

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,11 +12,11 @@
 <form method="post" action = "/users/login">
   <div>
     <label>User</label>
-    <input type="text" name="username">
+    <input type="text" name="username" placeholder="user name">
   </div>
   <div>
     <label>Enter Password:</label>
-    <input type="text" name="password">
+    <input type="password" name="password">
   </div>
   <div>
     <input type="submit" value="Submit">
