--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,11 +1,11 @@
 <form method="post" action="/users/signup">
   <div>
     <label>Enter Username:</label>
-    <input type="text" name="username">
+    <input type="text" name="username" placeholder="user name">
   </div>
   <div>
     <label>Enter Password:</label>
-    <input type="text" name="password">
+    <input type="password" name="password">
   </div>
   <div>
     <input type="submit" value="Submit">
