--- a/app/views/inventory/index.erb
+++ b/app/views/inventory/index.erb
@@ -1,4 +1,6 @@
-<h1>What do you have</h1>
+<h1><%= @flash %>
+</h1>
+<h1>What do you have this time?</h1>
 <form action="/recipes" method="get">
   <% Inventory.all.each do |item| %>
   <input name="item" type="checkbox" value="<%= item.id %>"><%= item.name %><br>
