--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,9 +15,10 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/javascript/application.js"></script>
 
-  <title></title>
+  <title>Recipie</title>
 </head>
 <body>
+  <%= erb :_user_bar  %>
   <%= yield %>
 </body>
 </html>
