--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,13 +1,13 @@
-<form method="post" action="/users/signup">
+<form action="/users/signup" method="post">
   <div>
     <label>Enter Username:</label>
-    <input type="text" name="username" placeholder="user name">
+    <input name="user[username]" placeholder="Username" type="text">
   </div>
   <div>
     <label>Enter Password:</label>
-    <input type="password" name="password">
+    <input name="user[password]" placeholder="password" type="password">
   </div>
   <div>
-    <input type="submit" value="Submit">
+    <input type="submit" value="submit">
   </div>
 </form>
