--- a/app/views/_user_bar.erb
+++ b/app/views/_user_bar.erb
@@ -20,10 +20,10 @@
         <input name="user[password]" placeholder="" type="password">
       </div>
       <div>
-        <input type="submit" value="submit">
+        <input type="submit" value="login">
       </div>
     </form>
-    <a href="/user/signup">Sign up</a>
+    <a href="/users/signup">Sign up</a>
   <% else %>
     <form action="/users/logout" class="form-logout" method="post">
       <button class="btn btn-lg btn-primary btn-block" type="submit">Logout</button>
