--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -8,6 +8,6 @@
     <input name="user[password]" placeholder="password" type="password">
   </div>
   <div>
-    <input type="submit" value="submit">
+    <input type="submit" value="sign up">
   </div>
 </form>
