--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -1,9 +1,7 @@
-<h1>Recipe matches for
+<h1>Recipe matches for</h1>
   <% @items.each do |item| %>
   <p><%= Inventory.find(item).name %></p>
   <% end %>
-</h1>
-
 <hr/>
 
   <% @recipes.each do |recipe| %>
@@ -11,7 +9,7 @@
       <div class="recipe">
         <h1>
           <a href="/recipe/<%= recipe.id %>">
-              <%= recipe.name %></a>
+            <%= recipe.name %></a>
         </h1>
         <p>
           <a href="<%= recipe.link %>">How to</a>
