--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -1,6 +1,6 @@
 <h1>Recipe matches for</h1>
   <% @items.each do |item| %>
-  <p><%= Inventory.find(item).name %></p>
+  <p><%= item %></p>
   <% end %>
 <hr/>
 
