--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -4,16 +4,32 @@
   <% end %>
 <hr/>
 
-  <% @recipes.each do |recipe| %>
-    <% if has_all_ingredients(recipe) %>
-      <div class="recipe">
-        <h1>
-          <a href="/recipe/<%= recipe.id %>">
-            <%= recipe.name %></a>
-        </h1>
-        <p>
-          <a href="<%= recipe.link %>">How to</a>
-        </p>
-      </div>
-    <% end %>
+<% @recipes.each do |recipe| %>
+  <% if missing_ingredients(recipe).length == 0 %>
+    <div class="recipe">
+      <h1>
+        <a href="/recipe/<%= recipe.id %>">
+          <%= recipe.name %></a>
+      </h1>
+      <p>
+        <a href="<%= recipe.link %>">How to</a>
+      </p>
+    </div>
   <% end %>
+<% end %>
+
+<% @recipes.each do |recipe| %>
+  <% missing = missing_ingredients(recipe)%>
+  <% if missing.length >= 1 %>
+    <div class="recipe">
+      <h1>
+        <p>And you're some <%= missing[0] %> away from </p>
+        <a href="/recipe/<%= recipe.id %>">
+          <%= recipe.name %></a>
+      </h1>
+      <p>
+        <a href="<%= recipe.link %>">How to</a>
+      </p>
+    </div>
+  <% end %>
+<% end %>
