--- a/app/views/_user_bar.erb
+++ b/app/views/_user_bar.erb
@@ -1,32 +1,34 @@
-<div>
-  <!-- <% if @user && @user.errors.any? %>
-  <div>
-    <strong>Your input had the following issues:</strong>
-    <ul>
-      <% @user.errors.messages.each do |message| %>
-      <li><%= message %></li>
-      <%end%>
-    </ul>
-  </div>
-  <% end %> -->
-  <% if not logged_in %>
-    <form action="/users/login" method="post">
-      <div>
-        <label>Enter Username:</label>
-        <input name="user[username]" placeholder="Username" type="text">
-      </div>
-      <div>
-        <label>Enter Password:</label>
-        <input name="user[password]" placeholder="" type="password">
-      </div>
-      <div>
-        <input type="submit" value="login">
-      </div>
-    </form>
-    <a href="/users/signup">Sign up</a>
-  <% else %>
-    <form action="/users/logout" class="form-logout" method="post">
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Logout</button>
-    </form>
+<% if @user && @user.errors.any? %>
+  <% @user.errors.messages.each do |message| %>
+    <div class="alert alert-danger" role="alert">...</div><%= message %></li></div>
   <% end %>
-</div>
+<% end %>
+
+<% if not logged_in %>
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <form action="/users/login" class="navbar-form navbar-left" id="signin" method="post" name="signin" role="form">
+
+      <div class="input-group">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+        <input class="form-control" id="email" name="user[username]" placeholder="Username" type="text" value="">
+      </div>
+
+      <div class="input-group">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+        <input class="form-control" id="password" name="user[password]" placeholder="Password" type="password" value="">
+      </div>
+      <button class="btn btn-primary" type="submit">Login</button>
+    </form>
+
+    <ul class="nav navbar-form navbar-right">
+      <a class="btn btn-default" href="/users/signup">or..Sign up</a>
+    </ul>
+
+  </div>
+<% else %>
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <form action="/users/logout" class="navbar-form navbar-left" id="signin" method="post" name="signin" role="form">
+      <button class="btn btn-primary" type="submit">Logout</button>
+    </form>
+  </div>
+<% end %>
