--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,12 @@
-<h1><%= @flash %>
-</h1>
+<div class="alert alert-success" role="alert"><%= @flash %></div>
 <h1>What do you have this time?</h1>
 <form action="/recipes" method="get">
   <% Inventory.all.each do |item| %>
-  <input name="item" type="checkbox" value="<%= item.id %>"><%= item.name %><br>
+  <div class="checkbox">
+      <input name="<%= item.id %>" type="checkbox" value="<%= item.id %>" class="btn btn-default">
+      <label for="button"><%= item.name %></label>
+
+  </div>
   <% end %>
-  <button type="submit">Go</button>
+  <button type="submit" class="btn btn-default">Go</button>
 </form>
