--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
-  <link rel="stylesheet" href="/stylesheets/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
-  <link rel="stylesheet" href="/stylesheets/application.css">
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/javascript/application.js"></script>
-
+  <link rel="stylesheet" href="/stylesheets/bootstrap.css">
+  <link rel="stylesheet" href="/stylesheets/jumbotron.css">
   <title>Recipie</title>
+  <style>
+      /*input[type=checkbox] {
+       position: absolute;
+       top: -9999px;
+       left: -9999px;
+    }
+    label {
+        display:inline-block;
+        background:#ccc;
+        margin:0 0 .5em 0;
+        padding:1em 2em;
+    }*/
+  </style>
 </head>
+
 <body>
-  <%= erb :_user_bar  %>
-  <%= yield %>
+  <div class="container">
+    <div class="header clearfix">
+      <nav class="navbar navbar-default">
+        <%= erb :_user_bar  %>
+      </nav>
+      <div class="jumbotron">
+        <%= yield %>
+      </div>
+
+      <div class="row marketing">
+        <div class="col-lg-6">
+        </div>
+      </div>
+
+      <footer class="footer">
+        <p>&copy; Company 2014</p>
+    </footer>
+  </div>
 </body>
+
 </html>
