--- a/app/views/inventory/index.erb
+++ b/app/views/inventory/index.erb
@@ -2,8 +2,13 @@
 </h1>
 <h1>What do you have this time?</h1>
 <form action="/recipes" method="get">
-  <% Inventory.all.each do |item| %>
-  <input name="items[<%= item.id %>]" type="checkbox" value="<%= item.id %>"><%= item.name %><br>
-  <% end %>
-  <button type="submit">Go</button>
+  <div class="btn-group btn-block" data-toggle="buttons">
+    <% Inventory.all.each do |item| %>
+      <label class="btn btn-primary btn-block">
+        <input name="pantry[]" type="checkbox" value="<%= item.id %>" autocomplete="off"> <%= item.name %>
+      </label>
+      <br>
+    <% end %>
+  </div>
+  <button type="submit" class="btn btn-default btn-block">Go</button>
 </form>
