Adjusted actions to match new checkbox param

--- a/app/views/_user_bar.erb
+++ b/app/views/_user_bar.erb
@@ -27,7 +27,7 @@
   </div>
 <% else %>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <form action="/users/logout" class="navbar-form navbar-left" id="signin" method="post" name="signin" role="form">
+    <form action="/users/logout" class="navbar-form navbar-right" id="signin" method="post" role="form">
       <button class="btn btn-primary" type="submit">Logout</button>
     </form>
   </div>
