--- a/app/views/inventory/index.erb
+++ b/app/views/inventory/index.erb
@@ -1,30 +1,32 @@
-<h1><%= @flash %>
-</h1>
+<% if @flash %>
+  <div class="alert alert-success" role="alert">
+    <%= @flash %>
+  </div>
+<% end %>
+
 <h1>What do you have this time?</h1>
 <form action="/recipes" method="get">
   <div class="btn-group btn-block" data-toggle="buttons">
     <% Inventory.all.each do |item| %>
-      <label class="btn btn-primary btn-block">
-        <input name="pantry[]" type="checkbox" value="<%= item.id %>" autocomplete="off"> <%= item.name %>
-      </label>
+      <%= erb :"inventory/_pantry_checkbox", locals: {item: item} %>
       <br>
     <% end %>
   </div>
   <button type="submit" class="btn btn-default btn-block">Go</button>
 </form>
 
-<h1>Here's what you got already:</h1>
-<form action="/inventory/delete" method="post">
-  <div class="btn-group btn-block" data-toggle="buttons">
-    <% Inventory.all.each do |item| %>
-      <% if logged_in %>
-        <% if is_in_pantry(item.id) %>
-        <label class="btn btn-primary btn-block">
-          <input name="pantry[]" type="checkbox" value="<%= item.id %>" autocomplete="off"> <%= item.name %>
-        </label>
+<% if logged_in %>
+  <h1>Here's what you got already:</h1>
+  <form action="/inventory/delete" method="post">
+    <div class="btn-group btn-block" data-toggle="buttons">
+      <% Inventory.all.each do |item| %>
+        <% if logged_in %>
+          <% if is_in_pantry(item.id) %>
+            <%= erb :"inventory/_pantry_checkbox", locals: {item: item} %>
+          <% end %>
         <% end %>
       <% end %>
-    <% end %>
-  </div>
-  <button type="submit" class="btn btn-default btn-block">Go</button>
-</form>
+    </div>
+    <button type="submit" class="btn btn-default btn-block">Go</button>
+  </form>
+<% end %>
