--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,13 +1,11 @@
-<form action="/users/signup" method="post">
-  <div>
-    <label>Enter Username:</label>
-    <input name="user[username]" placeholder="Username" type="text">
+<form action="/users/signup" method="POST" class="form-horizontal">
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input name="user[username]" type="text" class="form-control" id="exampleInputEmail1" placeholder="Name">
   </div>
-  <div>
-    <label>Enter Password:</label>
-    <input name="user[password]" placeholder="password" type="password">
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input name="user[password]" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
   </div>
-  <div>
-    <input type="submit" value="sign up">
-  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
 </form>
