--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,4 +1,4 @@
-<form action="/users/signup" method="post">
+<form action="/users" method="post">
   <div>
     <label>Enter Username:</label>
     <input name="user[username]" placeholder="Username" type="text">
