Addressed style on recipes pages and minor tweaks overall

--- a/app/views/inventory/index.erb
+++ b/app/views/inventory/index.erb
@@ -8,12 +8,9 @@
 <form action="/recipes" method="get">
   <div class="btn-group btn-block" data-toggle="buttons">
     <% Inventory.all.each do |item| %>
-      <% unless is_in_pantry(item.id) %>
-        <label class="btn btn-primary btn-block">
-          <%= erb :"inventory/_pantry_checkbox", locals: {item: item} %>
-        </label>
+        <% unless logged_in && is_in_pantry(item.id) %>
+            <%= erb :"inventory/_pantry_checkbox", locals: {item: item} %>
       <% end %>
-      <br>
     <% end %>
   </div>
   <button type="submit" class="btn btn-default btn-block">Go</button>
