--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="header clearfix">
       <nav class="navbar navbar-default">
-        <%= erb :_user_bar  %>
+        <%= erb :"shared/_user_bar"  %>
       </nav>
     </div>
 
