--- a/app/views/recipes/display.erb
+++ b/app/views/recipes/display.erb
@@ -1,3 +1,5 @@
+<%= erb :"shared/_errors", locals: {target: @recipe %>
+
 <table class="table table-striped">
   <thead><%= @recipe.name %></thead>
   <thead>Ingredients</thead>
