--- a/app/views/shared/_user_bar.erb
+++ b/app/views/shared/_user_bar.erb
@@ -28,7 +28,7 @@
 <% else %>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <form action="/users/logout" class="navbar-form navbar-right" id="signin" method="post" role="form">
-      <button class="btn btn-primary" type="submit">Logout</button>
+      <button class="btn btn-danger" type="submit">Logout</button>
     </form>
   </div>
 <% end %>
