--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,12 +1,13 @@
+<%= erb :"shared/_errors", locals: {target: @user} %>
 
 <form action="/users/signup" method="POST" class="form-horizontal">
   <div class="form-group">
-    <label for="username">Username</label>
-    <input name="user[username]" type="text" class="form-control" id="exampleInputEmail1" placeholder="Name">
+    <h3><label for="username">Username</label></h3>
+    <input name="user[username]" type="text" class="form-control input-lg" placeholder="Name" autofocus="true">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input name="user[password]" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <h3><label for="exampleInputPassword1">Password</label></h3>
+    <input name="user[password]" type="password" class="form-control input-lg" placeholder="Password">
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-success">Submit</button>
 </form>
