--- a/app/views/_user_bar.erb
+++ b/app/views/_user_bar.erb
@@ -4,7 +4,7 @@
   <% end %>
 <% end %>
 
-<% if not logged_in %>
+<% if not current_user %>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <form action="/users/login" class="navbar-form navbar-left" id="signin" method="post" name="signin" role="form">
 
