--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,6 +17,8 @@
       </nav>
     </div>
 
+    <%= erb :"shared/_flash_alerts"  %>
+
     <div class="jumbotron">
       <%= yield %>
     </div>
