--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -9,16 +9,18 @@
 <table class="table table-striped">
   <tbody>
     <% @recipes.each do |recipe| %>
-    <% if missing_ingredients(recipe, @items).length == 0 %>
-      <tr>
-        <td>
-          <a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a>
-        </td>
-      </tr>
-    <% end %>
+      <% if missing_ingredients(recipe, @items).length == 0 %>
+        <tr>
+          <td>
+            <h3><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></h3>
+          </td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
+
+<hr/>
 
 <table class="table table-striped">
   <tbody>
@@ -27,10 +29,13 @@
       <% if missing.length == 1 %>
         <tr>
           <td>
-            <a href="/recipes/<%= recipe.id %>"><p>And you're some <%= missing[0] %> away from <%= recipe.name %></a>
+            <a href="/recipes/<%= recipe.id %>"><h3>And you're some <%= missing.first %> away from <%= recipe.name %></h3>
           </td>
         </tr>
       <% end %>
     <% end %>
   </tbody>
 </table>
+
+<hr>
+<h4><a href="/inventory">Oops I forgot some ingredients</a></h4>
