--- a/app/views/recipes/display.erb
+++ b/app/views/recipes/display.erb
@@ -2,7 +2,7 @@
 <h2>Ingredients</h2>
 <ul class="list-unstyled">
 <% @recipe.ingredients.each do |ingredient| %>
-  <li><h3><%= Inventory.find(ingredient.inventory_id).name.capitalize %><h3></li>
+  <li><h3><%= Inventory.find(ingredient.inventory_id).name %><h3></li>
 </ul>
 <% end %>
 <h2><a href="<%= @recipe.link %>">How to</a></h2>
